<resources>
    <string name="app_name">Sample Login</string>
    <string name="label_username">UserName</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_confirm_password">Confirm Password</string>
    <string name="label_sign_up">Sign up</string>
    <string name="label_delete">Delete</string>
    <string name="label_update">Update</string>
    <string name="label_login">login</string>
    <string name="label_full_name">Full Name</string>

    <string name="error_full_name">FullName not Valid</string>
    <string name="error_user_name">Username not valid</string>
    <string name="error_email">Email Not Valid</string>
    <string name="error_password">Password Not Valid</string>
    <string name="error_confirm_password">Password Not Matched</string>
</resources>